# fw-nrfconnect-nrf

./: .gitignore  CODEOWNERS  west.yml
_build_asset_tracker_DK/: .ninja_deps  .ninja_log  CMakeCache.txt  Kconfig.modules  build.ninja  cmake_install.cmake  partitions.yml  pm.config  rules.ninja  zephyr_modules.txt
_build_asset_tracker_DK/Kconfig/: Kconfig.modules
_build_asset_tracker_DK/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  shared_vars.cmake  zephyr_modules.txt  zephyr_settings.txt
_build_asset_tracker_DK/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  shared_vars.cmake
_build_asset_tracker_DK/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dfu_application.zip_manifest.json  edt.pickle  isr_tables.c  linker.cmd.dep  linker_pass_final.cmd.dep  mcuboot_primary.hex  mcuboot_primary_app.hex  merged.hex  nrf9160_pca10090ns.dts_compiled  runners.yaml  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
_mqtt_simple_T91_nolib/zephyr/: .config.old
applications/asset_tracker/: CMakeLists.txt  Kconfig  README.rst  lwm2m_carrier_overlay.conf  prj.conf  prj_thingy91_nrf9160ns.conf
applications/asset_tracker_v2/: prj.conf
applications/connectivity_bridge/: overlay-serial.conf  sysbuild.conf  thingy91x_mcumgr.overlay
applications/serial_lte_modem/: Kconfig  prj.conf
applications/thingyworld/: CMakeLists.txt  prj.conf
include/: modem_info.h  nrf_cloud.h  service_info.h
include/caf/: led_effect.h
include/drivers/: gps.h
include/modem/: modem_attest_token.h  modem_info.h  modem_jwt.h
include/net/: aws_fota.h  cloud.h  download_client.h  fota_download.h  nrf_cloud.h  nrf_cloud.rst  nrf_cloud_agps.h  nrf_cloud_agps.rst  nrf_cloud_cell_pos.h  nrf_cloud_coap.h  nrf_cloud_codec.h  nrf_cloud_pgps.rst  nrf_cloud_rest.h  nrf_cloud_rest.rst  nrf_jwt.h
lib/: CMakeLists.txt  Kconfig
lib/agps/: Kconfig  agps.c
lib/at_cmd/: at_cmd.c
lib/at_cmd_parser/: at_cmd_parser.c
lib/at_host/: at_host.c
lib/lte_link_control/: lte_lc.c
lib/modem_jwt/: Kconfig  (+2 more)
tests/subsys/net/lib/nrf_cloud/fota/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/net/lib/nrf_cloud/fota/src/: fakes.h  main.c
(+611 files in other folders)
